--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "node-telegram-bot-api": "^0.30.0",
     "request": "^2.88.0"
   }
